Removed the force operation from and added the force evaluation contexts to the ML model. TODO: Scheme.

--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -4,22 +4,22 @@
 \vspace{5pt}
 
 % mh - lump
-$\mathscr{E}[^{L}MH^{L}$ $(^{L}HS$ $v_{S})]_{F}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
+$\mathscr{E}[^{L}MH^{L}$ $(^{L}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
 
 \vspace{5pt}
 
 % mh - number
-$\mathscr{E}[^{N}MH^{N}$ $\overline{n}]_{F}\rightarrow\mathscr{E}[\overline{n}]$ \\
+$\mathscr{E}[^{N}MH^{N}$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
 \vspace{5pt}
 
 % mh - list - nil
-$\mathscr{E}[^{[T]}MH^{[T]}$ $\mathtt{nil}^{T}]_{F}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
+$\mathscr{E}[^{[T]}MH^{[T]}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
 
 \vspace{5pt}
 
 % mh - function
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{H})]_{F}\rightarrow$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{H})]_{M}\rightarrow$ \\
 
 \vspace{5pt}
 
@@ -28,12 +28,12 @@ $\quad\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}MH^{T_{2}}$ $((\lambda x_{1}:T_{1
 \vspace{5pt}
 
 % mh - universal
-$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(\Lambda X.e_{H})]_{F}\rightarrow\mathscr{E}[\Lambda X.(^{T}MH^{T}$ $e_{H})]$ \\
+$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(\Lambda X.e_{H})]_{M}\rightarrow\mathscr{E}[\Lambda X.(^{T}MH^{T}$ $e_{H})]$ \\
 
 \vspace{5pt}
 
 % mh - universal hs
-$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{F}\rightarrow\mathscr{E}[^{\forall X.T}MS$ $v_{S}]$ \\
+$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{\forall X.T}MS$ $v_{S}]$ \\
 \end{tabular}
 \caption{ML-Haskell operational semantics}
 \label{mhos}
