--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
-$\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[v_{M}/x]]$ \\
+$\mathscr{E}[(\lambda x:T.e_{M})$ $u_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[u_{M}/x]]$ \\
 
 \vspace{5pt}
 
@@ -67,11 +67,7 @@ $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{force}$ $v_{M}]_{M}\rightarrow\mathscr{E}[v_{M}]$ $(v_{M}\neq{^{T}M}H^{T}$ $e_{H}$ or $v_{M}={^{[T]}M}H^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$
+$\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{M}\rightarrow$ \textbf{Error}: string
 \end{tabular}
 \caption{ML operational semantics}
 \label{mos}
