--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -3,19 +3,19 @@
 \begin{tabular}{lcl}
 \vspace{5pt}
 
-$e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $o$ $e_{M}$ $e_{M}$ \\
+$e_{M}$ & $=$ & $u_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $o$ $e_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $\mathtt{force}$ $e_{M}$ $\vert$ $^{T}MS$ $e_{S}$ \\
+&& $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $^{T}MS$ $e_{S}$ \\
 
 \vspace{5pt}
 
-$v_{M}$ & $=$ & $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}^{T}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
+$u_{M}$ & $=$ & $v_{M}$ $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $^{L}MS$ $v_{S}$ $\vert$ $^{\forall X.T}MS$ $v_{S}$ \\
+$v_{M}$ & $=$ & $\lambda x:T.e_{M}$ $\vert$ $\Lambda X.e_{M}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}^{T}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $v_{M}$ $\vert$ $^{L}MS$ $v_{S}$ $\vert$ $^{\forall X.T}MS$ $v_{S}$ \\
 
 \vspace{5pt}
 
@@ -31,19 +31,19 @@ $o$ & $=$ & $+$ $\vert$ $-$ \\
 
 \vspace{5pt}
 
-$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ \\
+$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $F_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{fix}$ $F_{M}$ $\vert$ $F_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
+&& $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $f$ $F_{M}$ $\vert$ $o$ $F_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $F_{M}$ $\vert$ $\mathtt{null?}$ $F_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{if0}$ $E_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{force}$ $F_{M}$ $\vert$ $^{T}MS$ $E_{S}$ \\
+&& $\vert$ $\mathtt{if0}$ $F_{M}$ $e_{M}$ $e_{M}$ $\vert$ $^{T}MS$ $E_{S}$ \\
 
 \vspace{5pt}
 
-$F_{M}$ & $=$ & $[\,]_{F}$ $\vert$ $E_{M}$ $\vert$ $^{T}MH^{T}$ $E_{H}$
+$F_{M}$ & $=$ & $E_{M}$ $\vert$ $^{T}MH^{T}$ $E_{H}$
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
 \label{mg}
