--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -3,6 +3,11 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
+% ms - sh
+$\mathscr{E}[^{[T]}MS$ $(SH^{[T]}$ $e_{H})]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $e_{H}]$ \\
+
+\vspace{5pt}
+
 % ms - number
 $\mathscr{E}[^{N}MS$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
@@ -20,11 +25,6 @@ $\mathscr{E}[^{[T]}MS$ $\mathtt{nil}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T[
 
 % ms - list - cons
 $\mathscr{E}[^{[T]}MS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{M}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}MS$ $v_{S}^{1})$ $(^{[T]}MS$ $v_{S}^{2})]$ \\
-
-\vspace{5pt}
-
-% ms - list - sh cons
-$\mathscr{E}[^{[T]}MS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]$ \\
 
 \vspace{5pt}
 
