--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -3,6 +3,11 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
+% sm - mh 
+$\mathscr{E}[SM^{T}$ $(^{T}MH^{T}$ $e_{H})]_{S}\rightarrow\mathscr{E}[SH^{T}$ $e_{H}]$ \\
+
+\vspace{5pt}
+
 % sm - lump
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
 
@@ -20,11 +25,6 @@ $\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathsc
 
 % sm - list - cons
 $\mathscr{E}[SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{S}\rightarrow\mathscr{E}[\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})]$ \\
-
-\vspace{5pt}
-
-% sm - list - mh cons
-$\mathscr{E}[SM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]$ \\
 
 \vspace{5pt}
 
