--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -1,6 +1,6 @@
 \chapter{Proof of Type Soundness}
 
-The type soundness of the model of computation must be proven for it to be useful.  Type soundness is ensured if progress of expressions and preservation of types are ensured.  Progress ensures that a well-typed, closed expression is either a value, reducible to another expression, or reducible to an error.  Preservation ensures that if a well-typed expression reduces to another expression, the other expression is well-typed and has the same type.  Proving progress and preservation proves type soundness.  The proof extends the proof by Kinghorn \cite{kinghorn07}, which was based on proofs by Pierce \cite{pierce02} and Matthews and Findler \cite{matthews07}.
+Proving the progress of expressions and the preservation of types proves the type soundness of the model of computation.  Progress ensures that a well-typed, closed expression is either a value, reducible to another expression, or reducible to an error.  Preservation ensures that if a well-typed expression reduces to another expression, the other expression is well-typed and has the same type.  The proof extends the proof by Kinghorn \cite{kinghorn07}, which was based on proofs by Pierce \cite{pierce02} and Matthews and Findler \cite{matthews07}.
 
 \section{Progress}
 
