--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
-$\mathscr{E}[(\lambda x:T.e_{M})$ $u_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[u_{M}/x]]$ \\
+$\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[v_{M}/x]]$ \\
 
 \vspace{5pt}
 
@@ -51,7 +51,7 @@ $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\overl
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
+$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $w_{M}^{1}$ $w_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
 
 \vspace{5pt}
 
