Added usepackage for array package. Set the extra row height.

--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,7 @@
 \usepackage{mathrsfs}
 \usepackage{setspace}
 \usepackage[overload]{textcase}
+\usepackage{array}
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{case}{Case}[theorem]
@@ -41,6 +42,7 @@
 \bibliographystyle{abbrv}
 \setlength{\parindent}{0.25in}
 \setlength{\parskip}{6pt}
+\setlength{\extrarowheight}{5pt}
 \geometry{verbose,nohead,tmargin=1.25in,bmargin=1in,lmargin=1.5in,rmargin=1.3in}
 \setcounter{tocdepth}{2}
 \newcommand{\captionfonts}{\small\bf\ssp}
