--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -1,49 +1,23 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{l}
-\vspace{5pt}
-
 % hm - mh
-$\mathscr{E}[^{T}HM^{T}$ $(^{T}MH^{T}$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{T}HM$ $(^{T}MH$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]$ \\
 % hm - lump
-$\mathscr{E}[^{L}HM^{L}$ $(^{L}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{L}HS$ $v_{S}]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{L}HM$ $(^{L}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{L}HS$ $v_{S}]$ \\
 % hm - number
-$\mathscr{E}[^{N}HM^{N}$ $\overline{n}]_{H}\rightarrow\mathscr{E}[\overline{n}]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{N}HM$ $\overline{n}]_{H}\rightarrow\mathscr{E}[\overline{n}]$ \\
 % hm - list - nil
-$\mathscr{E}[^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{[T]}HM$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
 % hm - list - cons
-$\mathscr{E}[^{[T]}HM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{[T]}HM$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HM$ $v_{M}^{1})$ $(^{[T]}HM$ $v_{M}^{2})]$ \\
 % hm - function
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{M})]_{H}\rightarrow$ \\
-
-\vspace{5pt}
-
-$\quad\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}HM^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{M})$ $(^{T_{1}}MH^{T_{1}}$ $x_{2})))]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HM$ $(\lambda x_{1}:T_{1}.e_{M})]_{H}\rightarrow$ \\
+$\quad\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}HM$ $((\lambda x_{1}:T_{1}.e_{M})$ $(^{T_{1}}MH$ $x_{2})))]$ \\
 % hm - universal
-$\mathscr{E}[^{\forall X.T}HM^{\forall X.T}$ $(\Lambda X.e_{M})]_{H}\rightarrow\mathscr{E}[\Lambda X.(^{T}HM^{T}$ $e_{M})]$ \\
-
-\vspace{5pt}
-
+$\mathscr{E}[^{\forall X.T}HM$ $(\Lambda X.e_{M})]_{H}\rightarrow\mathscr{E}[\Lambda X.(^{T}HM$ $e_{M})]$ \\
 % hm - universal ms
-$\mathscr{E}[^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{\forall X.T}HS$ $v_{S}]$ \\
+$\mathscr{E}[^{\forall X.T}HM$ $(^{\forall X.T}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{\forall X.T}HS$ $v_{S}]$ \\
 \end{tabular}
 \caption{Haskell-ML operational semantics}
 \label{hmos}
