--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -1,59 +1,59 @@
 \begin{figure}[p]
 \centering
 \begin{tabular}{l}
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[(\lambda x:T.e_{H}^{1})$ $e_{H}^{2}]_{H}\rightarrow\mathscr{E}[e_{H}^{1}[e_{H}^{2}/x]]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}[(\mathtt{fix}$ $(\lambda x:T.e_{H}))/x]]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[(\Lambda X.e_{H})$ $\lbrace T\rbrace]_{H}\rightarrow\mathscr{E}[e_{H}[T/X]]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{hd}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{T}$ ``Empty list"$]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}^{[T]}$ ``Empty list"$]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]_{H}\rightarrow\mathscr{E}[e_{H}^{1}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]_{H}\rightarrow\mathscr{E}[e_{H}^{2}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[+$ $\overline{n_{1}}$ $\overline{n_{2}}]_{H}\rightarrow\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[-$ $\overline{n_{1}}$ $\overline{n_{2}}]_{H}\rightarrow\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\overline{0}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]_{H}\rightarrow\mathscr{E}[\overline{1}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{H}^{1}$ $e_{H}^{2}]_{H}\rightarrow\mathscr{E}[e_{H}^{1}]$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{H}^{1}$ $e_{H}^{2}]_{H}\rightarrow\mathscr{E}[e_{H}^{2}]$ $(n\neq0)$ \\
 
-\vspace{5pt}
+%\vspace{5pt}
 
 $\mathscr{E}[\mathtt{wrong}^{T}$ string$]_{H}\rightarrow$ \textbf{Error}: string
 \end{tabular}
