--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -53,7 +53,7 @@
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
 \[
-\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T}{\Gamma\vdash_{H}{^{T}H}M^{T}\;e_{M}:T}
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T}{\Gamma\vdash_{H}{^{T}H}M\;e_{M}:T}
 \quad
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}{^{T}H}S\;e_{S}:T[T_{i}/T_{i}^{a}]}
 \]
