Changed M typing rules and MH opsem to drop right-side type annotations for MH guards.

--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -2,18 +2,18 @@
 \centering
 \begin{tabular}{l}
 % mh - lump
-$\mathscr{E}[^{L}MH^{L}$ $(^{L}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
+$\mathscr{E}[^{L}MH$ $(^{L}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
 % mh - number
-$\mathscr{E}[^{N}MH^{N}$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
+$\mathscr{E}[^{N}MH$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
 % mh - list - nil
-$\mathscr{E}[^{[T]}MH^{[T]}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
+$\mathscr{E}[^{[T]}MH$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
 % mh - function
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MH^{T_{1}\rightarrow T_{2}}$ $(\lambda x_{1}:T_{1}.e_{H})]_{M}\rightarrow$ \\
-$\quad\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}MH^{T_{2}}$ $((\lambda x_{1}:T_{1}.e_{H})$ $(^{T_{1}}HM^{T_{1}}$ $x_{2})))]$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}MH$ $(\lambda x_{1}:T_{1}.e_{H})]_{M}\rightarrow$ \\
+$\quad\mathscr{E}[\lambda x_{2}:T_{1}.(^{T_{2}}MH$ $((\lambda x_{1}:T_{1}.e_{H})$ $(^{T_{1}}HM$ $x_{2})))]$ \\
 % mh - universal
-$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(\Lambda X.e_{H})]_{M}\rightarrow\mathscr{E}[\Lambda X.(^{T}MH^{T}$ $e_{H})]$ \\
+$\mathscr{E}[^{\forall X.T}MH$ $(\Lambda X.e_{H})]_{M}\rightarrow\mathscr{E}[\Lambda X.(^{T}MH$ $e_{H})]$ \\
 % mh - universal hs
-$\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{\forall X.T}MS$ $v_{S}]$ \\
+$\mathscr{E}[^{\forall X.T}MH$ $(^{\forall X.T}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{\forall X.T}MS$ $v_{S}]$ \\
 \end{tabular}
 \caption{ML-Haskell operational semantics}
 \label{mhos}
