--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -53,7 +53,7 @@
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
 \[
-\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T}{\Gamma\vdash_{M}{^{T}M}H^{T}\;e_{H}:T}
+\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T}{\Gamma\vdash_{M}{^{T}M}H\;e_{H}:T}
 \quad
 \frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{M}{^{T}M}S\;e_{S}:T[T_{i}/T^{a}_{i}]}
 \]
