Revised model to use correct forced/unforced non-terminals.

--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -7,7 +7,7 @@ $e_{M}$ & $=$ & $v_{M}\;|\;x\;|\;e_{M}\;e_{M}\;|\;\mathtt{fix}\;e_{M}\;|\;e_{M}\
 % Unforced values
 $v_{M}$ & $=$ & $w_{M}\;|\;^{T}MH\;e_{H}$ \\
 % Forced values
-$w_{M}$ & $=$ & $\lambda x:T.e_{M}\;|\;\Lambda X.e_{M}\;|\;\overline{n}\;|\;\mathtt{nil}^{T}\;|\;\mathtt{cons}\;v_{M}\;v_{M}\;|\;^{L}MS\;w_{S}\;|\;^{\forall X.T}MS\;w_{S}$ \\
+$w_{M}$ & $=$ & $\lambda x:T.e_{M}\;|\;\Lambda X.e_{M}\;|\;\overline{n}\;|\;\mathtt{nil}^{T}\;|\;\mathtt{cons}\;v_{M}\;v_{M}\;|\;^{L}MS\;v_{S}\;|\;^{\forall X.T}MS\;v_{S}$ \\
 % Types
 $T$ & $=$ & $L\;|\;N\;|\;X\;|\;[T]\;|\;T^{a}\;|\;T\rightarrow T\;|\;\forall X.T$ \\
 % List operators
