--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -13,7 +13,7 @@ $\mathscr{E}[\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^
 $\mathscr{E}[+$ $\overline{n_{1}}$ $\overline{n_{2}}]_{M}\rightarrow\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
 $\mathscr{E}[-$ $\overline{n_{1}}$ $\overline{n_{2}}]_{M}\rightarrow\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\overline{0}]$ \\
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $w_{M}^{1}$ $w_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
+$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
 $\mathscr{E}[\mathtt{null?}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
 $\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}$ $\overline{n}$ $e_{M}^{1}$ $e_{M}^{2}]_{M}\rightarrow\mathscr{E}[e_{M}^{2}]$ $(n\neq0)$ \\
